[package]
name = "bp_analyser"
description = "[NSFW] Analyses data from a wiki site"
version = "0.0.0"
repository = "https://github.com/b42-sneak/bp_analyser"
documentation = "https://docs.rs/bp_analyser"
homepage = "https://github.com/b42-sneak/bp_analyser#readme"

edition = "2021"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = ["b42-sneak <59374651+b42-sneak@users.noreply.github.com>"]
include = ["/README.md", "/LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
scraper = "0.12.0"
structopt = "0.3"
tokio = { version = "1.12", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
csv = "1.1"
rayon = "1.5"
regex = "1.5"
lazy_static = "1.4"
